--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "公司的新人文档要根据角色来生成不一样的word文档",
   "main": "index.js",
   "scripts": {
-    "cli:create": "node index",
+    "cli:create": "node build/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "cheerio": "^1.0.0-rc.3",
     "ejs": "^3.1.3",
     "html-docx-js": "^0.3.1",
+    "inquirer": "^7.3.3",
     "marked": "^1.1.1"
   }
 }
